--- a/schema/meta/tenant.properties
+++ b/schema/meta/tenant.properties
@@ -4,5 +4,5 @@ permit_dynamic_types="false"
 hide_routes="true"
 post_text="Create Tenant"
 post_button_color="#8B4513"
-route=https://jcbr6205t2.execute-api.us-east-1.amazonaws.com/dev/api/json
+route=https://v3zus6fe5m.execute-api.us-east-1.amazonaws.com/dev/api/json
 authorized_reads=true
