--- a/cloudformation-template.yaml
+++ b/cloudformation-template.yaml
@@ -207,7 +207,7 @@ Resources:
                   - sqs:ReceiveMessage
                   - sqs:DeleteMessage
                   - sqs:GetQueueUrl
-                Resource: !GetAtt StripeWebhookDLQ.Arn
+                Resource: !GetAtt StripeWebhookQueue.Arn
 
   # Lambda Function
   JsonBlockBuilderLambda:
@@ -261,50 +261,15 @@ Resources:
               print(f"Event keys: {list(event.keys())}")
               
               try:
-                  # Check if this is an SQS event from DLQ
+                  # Check if this is an SQS event (all events now come through SQS)
                   if 'Records' in event and len(event['Records']) > 0:
-                      print("✅ SQS event detected from DLQ")
+                      print("✅ SQS event detected")
                       return handle_sqs_event(event)
-                  
-                  # Check if this is an EventBridge event from Stripe
-                  elif 'source' in event and event['source'].startswith('aws.partner/stripe.com'):
-                      print("✅ EventBridge event detected from Stripe")
-                      print(f"Event source: {event['source']}")
-                      print(f"Detail type: {event.get('detail-type', 'N/A')}")
-                      print(f"Full event structure: {json.dumps(event, indent=2)}")
-                      
-                      # The Stripe event should be in the 'detail' field
-                      if 'detail' in event:
-                          stripe_event = event['detail']
-                          print(f"Stripe event detail: {json.dumps(stripe_event, indent=2)}")
-                          
-                          # The event detail should contain the full Stripe event
-                          event_type = stripe_event.get('type')
-                          print(f"Stripe event type: {event_type}")
-                          
-                          if event_type == 'checkout.session.completed':
-                              print("🎯 Processing checkout.session.completed")
-                              return handle_checkout_completed(stripe_event)
-                          elif event_type == 'checkout.session.async_payment_succeeded':
-                              print("🎯 Processing checkout.session.async_payment_succeeded")
-                              return handle_checkout_succeeded(stripe_event)
-                          elif event_type == 'checkout.session.async_payment_failed':
-                              print("🎯 Processing checkout.session.async_payment_failed")
-                              return handle_checkout_failed(stripe_event)
-                          elif event_type == 'checkout.session.expired':
-                              print("🎯 Processing checkout.session.expired")
-                              return handle_checkout_expired(stripe_event)
-                          else:
-                              print(f"❌ Unhandled Stripe event type: {event_type}")
-                              return {'statusCode': 200, 'body': f'Stripe event type {event_type} not handled'}
-                      else:
-                          print("❌ No detail section found in EventBridge event")
-                          return {'statusCode': 400, 'body': 'No detail section in EventBridge event'}
                   else:
-                      print("❌ Not an EventBridge event from Stripe or SQS event")
-                      print(f"Event source: {event.get('source', 'N/A')}")
-                      return {'statusCode': 200, 'body': 'Event not from Stripe EventBridge or SQS'}
-                  
+                      print("❌ Not an SQS event")
+                      print(f"Event keys: {list(event.keys())}")
+                      return {'statusCode': 200, 'body': 'Event not from SQS'}
+
               except Exception as e:
                   print(f"💥 ERROR processing webhook: {str(e)}")
                   import traceback
@@ -312,9 +277,9 @@ Resources:
                   return {'statusCode': 500, 'body': f'Error: {str(e)}'}
           
           def handle_sqs_event(event):
-              """Handle SQS events from DLQ"""
+              """Handle SQS events from EventBridge"""
               print("=" * 30)
-              print("HANDLING SQS EVENT FROM DLQ")
+              print("HANDLING SQS EVENT FROM EVENTBRIDGE")
               print("=" * 30)
               
               try:
@@ -322,35 +287,37 @@ Resources:
                   for record in event.get('Records', []):
                       print(f"Processing SQS record: {json.dumps(record, indent=2)}")
                       
-                      # Extract the original Stripe event from the SQS message body
+                      # Extract the Stripe event from the SQS message body
                       if 'body' in record:
                           try:
-                              # Parse the SQS message body
-                              message_body = json.loads(record['body'])
-                              print(f"Parsed SQS message body: {json.dumps(message_body, indent=2)}")
+                              # Parse the SQS message body (now contains EventBridge event directly)
+                              eventbridge_event = json.loads(record['body'])
+                              print(f"Parsed EventBridge event: {json.dumps(eventbridge_event, indent=2)}")
                               
-                              # The message body should contain the original EventBridge event
-                              if 'detail' in message_body:
-                                  stripe_event = message_body['detail']
+                              # Extract the Stripe event from the EventBridge event detail
+                              if 'detail' in eventbridge_event:
+                                  stripe_event = eventbridge_event['detail']
                                   event_type = stripe_event.get('type')
                                   
-                                  print(f"Processing DLQ Stripe event type: {event_type}")
+                                  print(f"Processing Stripe event type: {event_type}")
                                   
                                   # Process the event based on type using existing handlers
                                   if event_type == 'checkout.session.completed':
                                       result = handle_checkout_completed(stripe_event)
-                                      print(f"DLQ Checkout completed result: {result}")
+                                      print(f"Checkout completed result: {result}")
                                   elif event_type == 'checkout.session.async_payment_succeeded':
                                       result = handle_checkout_succeeded(stripe_event)
-                                      print(f"DLQ Checkout succeeded result: {result}")
+                                      print(f"Checkout succeeded result: {result}")
                                   elif event_type == 'checkout.session.async_payment_failed':
                                       result = handle_checkout_failed(stripe_event)
-                                      print(f"DLQ Checkout failed result: {result}")
+                                      print(f"Checkout failed result: {result}")
                                   elif event_type == 'checkout.session.expired':
                                       result = handle_checkout_expired(stripe_event)
-                                      print(f"DLQ Checkout expired result: {result}")
+                                      print(f"Checkout expired result: {result}")
                                   else:
-                                      print(f"Unhandled DLQ event type: {event_type}")
+                                      print(f"Unhandled event type: {event_type}")
+                              else:
+                                  print("No detail section found in EventBridge event")
                                       
                           except json.JSONDecodeError as e:
                               print(f"Failed to parse SQS message body: {e}")
@@ -360,7 +327,7 @@ Resources:
                           
                   return {
                       'statusCode': 200,
-                      'body': json.dumps({'message': 'SQS DLQ processing completed'})
+                      'body': json.dumps({'message': 'SQS processing completed'})
                   }
                   
               except Exception as e:
@@ -382,14 +349,15 @@ Resources:
                   session = stripe_event['data']['object']
                   print(f"Session data: {json.dumps(session, indent=2)}")
                   
-                  amount_total = session.get('amount_total', 0)  # Amount in cents
-                  print(f"Amount total: {amount_total} cents")
+                  # Use amount_subtotal instead of amount_total
+                  amount_subtotal = session.get('amount_subtotal', 0)  # Amount in cents
+                  print(f"Amount subtotal: {amount_subtotal} cents")
                   
                   # Convert amount to tokens ($1 = 30,000 tokens)
-                  tokens_purchased = (amount_total // 100) * 30000  # $1 = 30,000 tokens
+                  tokens_purchased = (amount_subtotal // 100) * 30000  # $1 = 30,000 tokens
                   print(f"Tokens to credit: {tokens_purchased}")
                   
-                  print(f"Processing payment for {tokens_purchased} tokens, amount: ${amount_total/100}")
+                  print(f"Processing payment for {tokens_purchased} tokens, amount: ${amount_subtotal/100}")
                   
                   # Get user email from customer_details.email (this is the correct field)
                   customer_details = session.get('customer_details', {})
@@ -405,16 +373,28 @@ Resources:
                   
                   print(f"✅ Crediting {tokens_purchased} tokens to {user_email}")
                   
-                  # Prepare DynamoDB update
-                  update_expression = 'SET token_balance = if_not_exists(token_balance, :zero) + :tokens, total_tokens_purchased = if_not_exists(total_tokens_purchased, :zero) + :tokens, last_payment_date = :date, last_payment_amount = :amount, stripe_customer_id = :customer_id'
+                  # Get customer ID, only set if not empty
+                  customer_id = session.get('customer', '')
+                  print(f"Stripe customer ID: {customer_id}")
                   
-                  expression_values = {
-                      ':tokens': Decimal(str(tokens_purchased)),
-                      ':zero': Decimal('0'),
-                      ':date': Decimal(str(stripe_event['created'])),
-                      ':amount': Decimal(str(amount_total)),
-                      ':customer_id': session.get('customer', '')
-                  }
+                  # Prepare DynamoDB update - only set stripe_customer_id if it's not empty
+                  if customer_id:
+                      update_expression = 'SET token_balance = if_not_exists(token_balance, :zero) + :tokens, total_tokens_purchased = if_not_exists(total_tokens_purchased, :zero) + :tokens, last_payment_date = :date, last_payment_amount = :amount, stripe_customer_id = :customer_id'
+                      expression_values = {
+                          ':tokens': Decimal(str(tokens_purchased)),
+                          ':zero': Decimal('0'),
+                          ':date': Decimal(str(stripe_event['created'])),
+                          ':amount': Decimal(str(amount_subtotal)),
+                          ':customer_id': customer_id
+                      }
+                  else:
+                      update_expression = 'SET token_balance = if_not_exists(token_balance, :zero) + :tokens, total_tokens_purchased = if_not_exists(total_tokens_purchased, :zero) + :tokens, last_payment_date = :date, last_payment_amount = :amount'
+                      expression_values = {
+                          ':tokens': Decimal(str(tokens_purchased)),
+                          ':zero': Decimal('0'),
+                          ':date': Decimal(str(stripe_event['created'])),
+                          ':amount': Decimal(str(amount_subtotal))
+                      }
                   
                   print(f"Update expression: {update_expression}")
                   print(f"Expression values: {expression_values}")
@@ -1729,15 +1709,15 @@ Resources:
       Principal: events.amazonaws.com
       SourceArn: !GetAtt DailyBillingRule.Arn
 
-  # Dead Letter Queue for failed Stripe webhook events
-  StripeWebhookDLQ:
+  # SQS Queue for Stripe webhook events (now the main processing queue)
+  StripeWebhookQueue:
     Type: AWS::SQS::Queue
     Properties:
-      QueueName: !Sub 'stripe-webhook-dlq-${Environment}'
+      QueueName: !Sub 'stripe-webhook-queue-${Environment}'
       MessageRetentionPeriod: 1209600  # 14 days
       VisibilityTimeout: 30
 
-  # EventBridge Rule for Stripe webhook events
+  # EventBridge Rule for Stripe webhook events - now routes to SQS instead of Lambda
   StripeRule:
     Type: AWS::Events::Rule
     Properties:
@@ -1748,29 +1728,17 @@ Resources:
       Description: ''
       EventBusName: !Sub 'arn:aws:events:${AWS::Region}:${AWS::AccountId}:event-bus/aws.partner/stripe.com/ed_test_61TTWBLDLBl1c14x516TTKeNBlSQg1FcYBVxZwQS89Ci'
       Targets:
-        - Id: Id6e336aff-e974-4554-9b2a-c42941155243
-          Arn: !GetAtt StripeWebhookLambda.Arn
-          RoleArn: !GetAtt StripeWebhookLambdaRole.Arn
-          DeadLetterConfig:
-            Arn: !GetAtt StripeWebhookDLQ.Arn
-          RetryPolicy:
-            MaximumRetryAttempts: 2
+        - Id: StripeSQSTarget
+          Arn: !GetAtt StripeWebhookQueue.Arn
 
-  # Permission for EventBridge to invoke Stripe Webhook Lambda
-  StripeWebhookLambdaPermission:
-    Type: AWS::Lambda::Permission
-    Properties:
-      FunctionName: !Ref StripeWebhookLambda
-      Action: lambda:InvokeFunction
-      Principal: events.amazonaws.com
-      SourceArn: !GetAtt StripeRule.Arn 
+  # REMOVED: StripeWebhookLambdaPermission - EventBridge now routes to SQS instead of Lambda directly 
 
-  # Permission for EventBridge to send messages to DLQ
-  StripeWebhookDLQPolicy:
+  # Permission for EventBridge to send messages to SQS Queue
+  StripeWebhookQueuePolicy:
     Type: AWS::SQS::QueuePolicy
     Properties:
       Queues:
-        - !Ref StripeWebhookDLQ
+        - !Ref StripeWebhookQueue
       PolicyDocument:
         Version: '2012-10-17'
         Statement:
@@ -1778,16 +1746,16 @@ Resources:
             Principal:
               Service: events.amazonaws.com
             Action: sqs:SendMessage
-            Resource: !GetAtt StripeWebhookDLQ.Arn
+            Resource: !GetAtt StripeWebhookQueue.Arn
 
-  # SQS Event Source Mapping for DLQ to existing StripeWebhookLambda
-  StripeDLQEventSourceMapping:
+  # SQS Event Source Mapping for Queue to StripeWebhookLambda
+  StripeQueueEventSourceMapping:
     Type: AWS::Lambda::EventSourceMapping
     Properties:
-      EventSourceArn: !GetAtt StripeWebhookDLQ.Arn
+      EventSourceArn: !GetAtt StripeWebhookQueue.Arn
       FunctionName: !Ref StripeWebhookLambda
-      BatchSize: 10
-      MaximumBatchingWindowInSeconds: 5
+      BatchSize: 1
+      MaximumBatchingWindowInSeconds: 0
 
 Outputs:
   ApiGatewayUrl:
